--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.15.2",
     "zod": "^3.25.64"
